3.0.0
=====
m d, yyyy
- Gwen 3 release
  - Refactor and migrate codebase to Scala 3
  - Add init CLI option for initialising a new Gwen working directory
  - Support *.conf (HOCON), and *.json settings files in addition to *.properties files
  - Configurable CLI defaults
  - Associated meta enabled by default
  - Deprecated CLI option:
    - `-p/--properties` in favor of `-c/--config`
  - Deprecated settings:
    - `gwen.feature.failfast` in favor of `gwen.feature.failfast.enabled`
    - `gwen.rp.heartbeat` in favor of `gwen.rp.heartbeat.enabled`
  - New setting for specifying output directory of Gwen generated files (reports, etc..)
    - `gwen.output.dir` (default = target)
  
2.34.0
======
July 2, 2021
- Add new DSLs to support invoking system processes with quoted strings and other special cases
  - I execute system process "<process>" delmited by "<delimiter>"
  - I execute a unix system process "<process>" delmited by "<delimiter>"
  - <attribute> <is|will be> defined by system process "<expression>" delmited by "<delimiter>"
- Support passing DocStrings as parameters to StepDefs (addresses issue gwen-interpreter/gwen#60)
- Update report portal client-java from v5.0.21 to v5.0.22
  - Long name trunctation fix

2.33.0
======
June 22, 2021
- Report portal integration release
- Add `nodePath` and `sourceRef` options to `gwen.rp.testCaseId.keys` setting to support
  generating test case ID's based on node path or source reference only.
June 7, 2021 - 2.33.0-rc-rp.2
- Fix name clash between parameters and attributes in interpolator
- Convert back slashes in sourceRef and nodePath to forward slashes on Windows
- Send sourceRef as item attribute in report portal if it is less than or equal to 128 
  characeters in length, otherwise append it to the item description instead.
- Enforce case sensitivity on all report portal setting names.
- Improved test case ID generation for nodePath+params mode:
  - Remove all keywords from node paths and use node names only