@@ -25,7 +25,7 @@ gwen {
     }
   }
   behavior {
-    rules = "lenient"             # lenient|strict
+    rules = "lenient"             # strict|lenient
   }
   cli {                           # Default CLI options
     options {                     # See: https://github.com/gwen-interpreter/gwen/wiki/Command-Line-Interface
@@ -70,7 +70,7 @@ gwen {
       enabled = true
       exit = false
     }
-    mode = "imperative"           # imperative|declarative
+    mode = "imperative"           # declarative|imperative
   }
   mask {
     char = "●"
