@@ -6,12 +6,13 @@ m d, yyyy
   - Add init CLI option for initialising a new Gwen working directory
   - Support *.conf (HOCON), and *.json settings files in addition to *.properties files
   - Configurable CLI defaults
-  - Associated meta enabled by default
   - Deprecated CLI option:
     - `-p/--properties` in favor of `-c/--config`
   - Deprecated settings:
     - `gwen.feature.failfast` in favor of `gwen.feature.failfast.enabled`
     - `gwen.rp.heartbeat` in favor of `gwen.rp.heartbeat.enabled`
+  - Changed setting defaults:
+    - `gwen.associative.meta = true` instead of `false`
   - New setting for specifying output directory of Gwen generated files (reports, etc..)
     - `gwen.output.dir` (default = target)
   
